[package]
name = "ermalloc"
version = "0.1.0"
authors = ["eric <eric7252000@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# For FFI
libc = "0.2"
cbindgen = "0.12.2"
# Various Error correcting options

# General
lazy_static = "1.4.0"

# Encoding
reed-solomon = "0.2.1"

[lib]
name = "ermalloc"
crate-type = ["staticlib"]
